--- a/GUIMagazzino/GUIMagazzino/MagazzinoGui/nbproject/private/private.properties
+++ b/GUIMagazzino/GUIMagazzino/MagazzinoGui/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\simone.riggio\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\sirim\\AppData\\Roaming\\NetBeans\\16\\build.properties
